k8s/applications/static/daemon-set.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: static
spec:
  selector:
    matchLabels:
      app: static
  template:
    metadata:
      labels:
        app: static
    spec:
      containers:
        - name: static
          image: nginx:1.31.1
          ports:
            - name: ingress
              containerPort: 80
          volumeMounts:
            - name: libraries
              mountPath: /usr/share/nginx/html/podcasts
              subPath: podcasts
      volumes:
        - name: libraries
          persistentVolumeClaim:
            claimName: libraries
      resources:
        limits:
          memory: 128Mi
        requests:
          cpu: 10m
          memory: 128Mi
