k8s/applications/static/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: static
spec:
  replicas: 3
  template:
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: "kubernetes.io/hostname"
              labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                      - static
      containers:
        - name: static
          image: nginx:1.21.0
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: media
              mountPath: /usr/share/nginx/html/podcasts
              subPath: Podcasts
            - name: media
              mountPath: /usr/share/nginx/html/audiobooks
              subPath: Audiobooks
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media
