k8s/applications/static/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
