k8s/applications/static/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: static
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("static.mchill.io")
      kind: Rule
      services:
        - name: static
          port: 80
      middlewares:
        - name: static
